# ZMeshMend

./: .gitignore  README.md  ZMeshMend_Launcher.py  debug-zb2022-density-slider.md  deploy_zb2022_zscript_fix.ps1  deploy_zb2023_mac.sh
Release/Python_v1.2.0/ZMeshMend/: ZMeshMend.py  ZMeshMend_config.txt
ZMeshMend/: ZMeshMend.py  ZMeshMend_ZScript.txt  ZMeshMend_config.txt  init.py
ZMeshMendData/: CMakeLists.txt  GoZ_Binary.h  GoZ_Config.h  GoZ_Mesh.cpp  GoZ_Mesh.h  GoZ_Utils.cpp  GoZ_Utils.h  ZFileUtils.lib  ZFileUtils_mac.cpp  ZMeshMend_pipeline.py  build.bat  build.sh  build_zfileutils_mac.sh  run_build.ps1  zmeshmend_config.txt  zmeshmend_core  zmeshmend_core.cpp
doc/: branches.md  project-reference.md  roadmap.md
